Added translation of some lines

--- a/src/main/resources/lang/rus.ini
+++ b/src/main/resources/lang/rus.ini
@@ -4,7 +4,7 @@ commands.generic.ingame=Используйте команду в игре!
 commands.generic.player.notfound=Не удалось найти игрока {%0}
 commands.generic.number.invalidinteger='{%0}' не является положительным целым числом
 commands.generic.number.invalid=Неверный номер, пожалуйста, повторите попытку!
-commands.generic.time.invalidtext=Time text incorrent, please retry!
+commands.generic.time.invalidtext=Неверный формат времени, пожалуйста, повторите попытку!
 commands.generic.enabled=Включен
 commands.generic.disabled=Отключен
 commands.generic.teleporting=Телепортация...
@@ -19,7 +19,7 @@ commands.generic.second={%0} Секунду
 commands.generic.time.format={%0} {%1} {%2} {%3}
 commands.generic.muted=Вы под мутом, размут через {%0}
 commands.generic.invalidboolean='{%0}' не является Boolean значением
-commands.generic.cooldown=Please wait {%0} seconds for your cool down to end.
+commands.generic.cooldown=Пожалуйста, подождите {%0} сек., пока не закончится ваш кулдаун
 commands.generic.teleporation.cooldown=Вы будете телепортированы через {%0} секунд...
 
 commands.back.description=Телепортация на ваше предыдущее местоположение
